fix bug: vertical align Apply on instrument profile

--- a/cms_frontend/css/custom.css
+++ b/cms_frontend/css/custom.css
@@ -2131,7 +2131,8 @@ margin-bottom: 15px;
 margin-bottom: 10px;
 }
 
-.page-meetings-related-meetings .view-filters {
+.page-meetings-related-meetings .view-filters,
+.page-publications-outreach-materials .view-filters {
 padding: 15px;
 margin-bottom: 20px;
 background-color: #F5F5F5;
@@ -2142,6 +2143,10 @@ border-radius: 4px;
 .page-meetings-related-meetings .views-exposed-form .form-submit,
 .page-publications-scientific-publications .views-exposed-form .form-submit {
 margin-top: 26px;
+}
+
+.node-type-legal-instrument .views-exposed-form .form-submit {
+margin-top: 43px;
 }
 
 
